--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Projects</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#about" class="active">About</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#projects">Projects</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/thomasekremer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/tbone7248/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/thomasekremer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/tkremer72" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto: tkremer@nc.rr.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -48,7 +48,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="about">
 								<div class="image main" data-position="center">
 									<img src="images/techbanner.png" alt="" />
 								</div>
@@ -73,7 +73,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="skills">
 								<div class="container">
 									<h3>Languages, Frameworks</h3>
 							<p>I am proficient in the following languages and frameworks.  <!-- In addition to the languages and 
@@ -107,10 +107,12 @@
 							</section>
 							
 						<!-- Three -->
-							<section id="three">
+							<section id="projects">
 								<div class="container">
 									<h3>My Projects</h3>
-									<p>These are just a few of the projects I have completed since graduating from Bethel School Of Technology</p>
+									<p>These are just a few of the projects I have completed since graduating from Bethel School Of Technology. Click the images
+										to navigate to the working project.
+									</p>
 									<div class="features">
 										<article>
 											<a href="http://javascript-lightbulb.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/bulb.jpg" alt="bulb" /></a>
@@ -122,7 +124,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="http://simple-javascript-calculator.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/calc.png" alt="" /></a>
+											<a href="http://simple-javascript-calculator.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/calc.png" alt="calc" /></a>
 											<div class="inner">
 												<h4>Simple JavaScript Caclulator</h4>
 												<p>This project uses HTML5 input fields, buttons, simple JavaScript functions, and DOM Manipulation to perform basic
@@ -131,7 +133,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="http://javascript-hangman.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/hangman.jpg" alt="" /></a>
+											<a href="http://javascript-hangman.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/hangman.jpg" alt="hangman"/></a>
 											<div class="inner">
 												<h4>JavaScript Hangman Game</h4>
 												<p>This is a very simple hangman game written in vanilla JavaScript.  The Application
@@ -154,7 +156,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="contact">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Let me know if you have any questions, comments or are looking for a developer to join your team.</p>
@@ -515,7 +517,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li style="font-size: 15px; font-weight: bold;"><img src="images/seethrough_1.png" alt="seethrough_1" style="height: 35px; width: 35px;"/> &copy; WebTek Inc. All rights reserved.</li><li style="font-size: 15px; font-weight: bold;">Design: <a href="mailto: tkremer@nc.rr.com">Thomas E. Kremer</a></li>
 							</ul>
 						</div>
 					</section>
