Added another project. re deployed.

--- a/index.html
+++ b/index.html
@@ -142,15 +142,18 @@
 												</p>
 											</div>
 										</article>
-										<!-- <article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<article>
+											<a href="https://webtek-city-care-backend.herokuapp.com/city-care/home" class="image">
+												<img src="images/CityCare2.png" alt="CityCare2" style="background-color: #92a4fb; width: 95px; margin: 0;"/>
+											</a>
 											<div class="inner">
-												<h4>Other projects I have done.</h4>
-												<p>Click one of the links to the left to see some of the other projects that I have done using HTML5,
-													JavaScript, CSS, Flexbox and or Bootstrap.
+												<h4>City Care Project</h4>
+												<p>Due to the COVID19 Pandemic, communities and people around the country have faced an 
+													unprecedented lack of the necessities that most people take for granted. Because of this 
+													pandemic, the team decided that for their final group project, they would focus on those needs.
 												</p>
 											</div>
-										</article> -->
+										</article> 
 									</div>
 								</div>
 							</section>
