Updated index.html file.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="http://javascript-lightbulb.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/bulb.jpg" alt="bulb" /></a>
+											<a href="http://javascript-lightbulb.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/bulb.jpg" alt="bulb" style="height: 130px; width: 100px;" /></a>
 											<div class="inner">
 												<h4>Light Bulb Application</h4>
 												<p>This project usees HTML5 image elements, two button elements, JavaScript  functions and DOM Manipulation to give the appearance of
@@ -124,7 +124,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="http://simple-javascript-calculator.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/calc.png" alt="calc" /></a>
+											<a href="http://simple-javascript-calculator.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/calc.png" alt="calc" style="height: 130px; width: 100px;" /></a>
 											<div class="inner">
 												<h4>Simple JavaScript Caclulator</h4>
 												<p>This project uses HTML5 input fields, buttons, simple JavaScript functions, and DOM Manipulation to perform basic
@@ -133,7 +133,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="http://javascript-hangman.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/hangman.jpg" alt="hangman"/></a>
+											<a href="http://javascript-hangman.s3-website.us-east-2.amazonaws.com/" class="image"><img src="images/hangman.jpg" alt="hangman" style="height: 160px; width: 130px;"/></a>
 											<div class="inner">
 												<h4>JavaScript Hangman Game</h4>
 												<p>This is a very simple hangman game written in vanilla JavaScript.  The Application
@@ -144,7 +144,7 @@
 										</article>
 										<article>
 											<a href="https://webtek-city-care-backend.herokuapp.com/city-care/home" class="image">
-												<img src="images/CityCare2.png" alt="CityCare2" style="background-color: #92a4fb; width: 95px; margin: 0;"/>
+												<img src="images/CityCare2.png" alt="CityCare2" style="background-color: #92a4fb; height: 100px; width: 130px; margin: 0;"/>
 											</a>
 											<div class="inner">
 												<h4>City Care Project</h4>
