Changed the City Care link.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://webtek-city-care-backend.herokuapp.com/city-care/home" class="image">
+											<a href="https://city-care-project.herokuapp.com/city-care/home" class="image">
 												<img src="images/CityCare2.png" alt="CityCare2" style="background-color: #92a4fb; height: 75px; width: 130px; margin: 0;"/>
 											</a>
 											<div class="inner">
